--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Atlanta Braves Baseball | Quiz App</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" type="text/css" />
   </head>
   <body>
+    <header>
+      <div class="quiz_header">
+        <h1>Atlanta Braves Quiz</h1>
+        <h2>0/10</h2>
+      </div>
+    </header>
+    <main role="main">
+      <div class="container">
+        <div class="question">
+          Who holds the record for the most homeruns in Atlanta Braves franchise
+          history?
+        </div>
+        <div class="answer">Hank Aaron</div>
+        <div class="answer">Chipper Jones</div>
+        <div class="answer">Dale Murphy</div>
+        <div class="answer">Eddie Mathews</div>
+      </div>
+    </main>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
