--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
     <link rel="stylesheet" href="index.css" type="text/css" />
   </head>
   <body>
@@ -30,8 +34,10 @@
           </fieldset>
         </form>
         <div class="question js-hidden">
-          <p>Who holds the record for the most homeruns in Atlanta Braves franchise
-          history?</p>
+          <p>
+            Who holds the record for the most homeruns in Atlanta Braves
+            franchise history?
+          </p>
         </div>
         <div class="a answer js-hidden"><p>Hank Aaron</p></div>
         <div class="b answer js-hidden"><p>Chipper Jones</p></div>
