game starts with a random question after start button clicked

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button class="js-quit">Quit</button>
           </fieldset>
         </form>
-        <div class="question js-hidden">
+        <!-- <div class="question js-hidden">
           <p>
             Who holds the record for the most homeruns in Atlanta Braves
             franchise history?
@@ -43,7 +43,7 @@
         <div class="b answer js-hidden"><p>Chipper Jones</p></div>
         <div class="c answer js-hidden"><p>Dale Murphy</p></div>
         <div class="d answer js-hidden"><p>Eddie Mathews</p></div>
-      </div>
+      </div> -->
     </main>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
