moved model to model.js

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <script src="model.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
