functions to render the score and the form using JS

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <body>
     <header>
       <div class="quiz_header">
-        <h1>Atlanta Braves Quiz</h1>
-        <h2>0/10</h2>
+        <h1 class="quiz_title">Atlanta Braves Quiz</h1>
+        <div class="score"></div>
       </div>
     </header>
     <main role="main">
       <div class="container">
-        <form class="quiz_start">
+        <!-- <form class="quiz_start">
           <fieldset>
             <legend>Atlanta Braves Quiz App</legend>
             <p>Welcome to the Quiz!</p>
@@ -32,7 +32,7 @@
             <button class="js-start">Start</button>
             <button class="js-quit">Quit</button>
           </fieldset>
-        </form>
+        </form> -->
         <!-- <div class="question js-hidden">
           <p>
             Who holds the record for the most homeruns in Atlanta Braves
