answer overlay styles plus randon cheers

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
         <div class="c answer js-hidden"><p>Dale Murphy</p></div>
         <div class="d answer js-hidden"><p>Eddie Mathews</p></div>
       </div> -->
+      <div class="answer_overlay correct_answer js-hidden">
+        <p>Correct! Keep up the good work!!</p>
+        <img src="https://sabr.org/sites/default/files/images/AaronHenry1.jpg" alt="Hank Aaron">
+        <button class="js-continue">Continue</button>
+      </div>
+      <div class="answer_overlay wrong_answer js-hidden">
+        <p>Wrong! The correct answer is Hank Aaron.</p>
+        <img src="https://sabr.org/sites/default/files/images/AaronHenry1.jpg" alt="Hank Aaron">
+        <button class="js-continue">Continue</button>
+      </div>
     </main>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
