--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <div class="quiz_header">
         <h1 class="quiz_title">Atlanta Braves Quiz</h1>
-        <div class="score">Score: 0/10</div>
+        <div class="score"></div>
       </div>
     </header>
     <main role="main">
