first question is rendered

--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
       </header>
     </header>
     <main role="main">
-      <div class="container">
-        <form class="welcome_form">
-          <fieldset>
-            <legend>Welcome form</legend>
-            <button>Start</button>
-          </fieldset>
-        </form>
-      </div>
+      <form class="welcome_form">
+        <fieldset>
+          <legend>Welcome form</legend>
+          <button class="js_game_start">Start</button>
+        </fieldset>
+      </form>
+      <div class="question_container hidden"></div>
     </main>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
