user can answer first question

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <header>
         <div class="quiz_header">
           <h1>Atlanta Braves Quiz</h1>
-          <h2>Score: 0/10</h2>
+          <div class="score"></div>
         </div>
       </header>
     </header>
@@ -23,7 +23,9 @@
           <button class="js_game_start">Start</button>
         </fieldset>
       </form>
-      <div class="question_container hidden"></div>
+      <div class="question_container hidden">
+        <form class="question"></form>
+      </div>
     </main>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
