game quesiton tracker subsection added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         <form class="question"></form>
       </div>
     </main>
+    <section>
+      <ul class="question_tracker">
+        <li class="questions_attempted"></li>
+        <li class="questions_remaining"></li>
+      </ul>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
