css upgrades round 2

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <main role="main">
       <form class="welcome_form">
         <fieldset>
-          <legend>Welcome form</legend>
-          <button class="js_game_start">Start</button>
+          <legend>Welcome to the Atlanta Braves Legends Quiz!</legend>
+          <p>Test your knowledge of all things Atlanta Braves and prove your true fandom!</p>
+          <button class="js_game_start">Let's Go!</button>
         </fieldset>
       </form>
       <div class="question_container hidden">
