--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <fieldset>
           <legend>Welcome to the Atlanta Braves Legends Quiz!</legend>
           <p>Test your knowledge of all things Atlanta Braves and prove your true fandom!</p>
-          <button class="js_game_start">Let's Go!</button>
+          <button class="js_game_start">Play Ball!</button>
         </fieldset>
       </form>
       <div class="question_container hidden">
