moved major html rendering to its own file

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="datastore.js"></script>
+    <script src="createHTML.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
